cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_370.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bio/bf_buff.c:413: error: DEAD_STORE
  The value written to &ret (type long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bio/bf_buff.c:413:5: Write of unused value
411.   static long buffer_callback_ctrl(BIO *b, int cmd, BIO_info_cb *fp)
412.   {
413.       long ret = 1;
           ^
414.   
415.       if (b->next_bio == NULL)
